      James Cowgill for the patch.  (Closes: #798252)
  * wrap-and-sort:
    + Avoid modifying an empty file.  Thanks to Chris Lamb for the patch.
      (Closes: #789579)
  * dd-list:
    + Omit information from stanzas with “Extra-Source-Only: yes”.
    + Use only the information from the most recent version of a package
      within each sources file.  (Closes: #788820)

  [ Dominique Dumont ]
  * licensecheck:
    * added --text option to avoid scanning binary files (Closes: #797562)
    * use 'file' command to decide whether to scan a file or
      not (instead of testing file suffix)
    * remove trailing '#' from © information
    * store only first © block to avoid duplicated information
    * remove '\' from © information (useful for nroff files)

  [ Adam D. Barratt ]
  * getbuildlog:
    + Stop downloading logs from debian-ports explicitly, now that it has
      been merged into buildd.debian.org and downloading from both locations
      causes duplicate downloads.  (Closes: #796506)

  [ Dmitry Shachnev ]
  * uscan: Use https protocol for pypi.debian.net redirector, now that it
    is available.  (Closes: #796880)

  [ Osamu Aoki ]
  * uscan:
    + Ensure the version field in the watch line is defined, rather than
      "true" before using it in a comparison.  The enables the use of 0 as a
      value for the version.  (Closes: #796984)

  [ Gunnar Wolf ]
  * debchange:
    + Allow the current preferred security upload targets
      (wheezy|jessie|stretch)-security instead of their changing
      counterparts (oldstable|stable|testing)-security (Closes: #797084)

  [ Antonio Terceiro ]
  * chdist:
    + Add support for running apt-file
  * debian/lintian-overrides: remove overrides for false positives that had
    been fixed in lintian

  [ Christoph Berg ]
  * debcheckout: Add auth mapping for git://github.com.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 30 Sep 2015 11:41:04 +0200

devscripts (2.15.8) unstable; urgency=high

  * licensecheck: